<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.msk.alldemo10.Help"
    android:weightSum="1"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="#FD2C93"
        android:weightSum="1">

        <Button

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/backshow"
            android:background="#FD2C93"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:text="@string/backshow" />

        <TextView

            android:layout_width="wrap_content"
            android:paddingTop="15dp"
            android:textColor="#FFFFFF"
            android:layout_height="56dp"
            android:id="@+id/textView3"
            android:textAlignment="center"
            android:textSize="38sp"
            android:layout_weight="0.63"
            android:text="帮助" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="179dp"
        android:layout_weight="0.08">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="193dp"
            app:srcCompat="@drawable/bangzhu"
            android:id="@+id/imageView" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="50px"
            android:text="@string/testview" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/pb_progressbar"
        style="@style/StyleProgressBarMini"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/shape_progressbar_bg"
        android:max="100"
        android:progress="50" />

    <Button
        android:text="@string/bangzhuanniu"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:id="@+id/bangzhuanniu"
        android:textColor="#FFFFFF"
        android:background="@android:color/holo_green_light"
        android:textAlignment="center" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="206dp"
            app:srcCompat="@drawable/w345"

            android:id="@+id/imageView4"
            android:layout_marginTop="40dp"
             />
    </LinearLayout>


</LinearLayout>